tests/test55.rael
log 123, log